# docs/swagger.json
@@ -23,7 +23,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.ResponseLogin"
+                            "$ref": "#/definitions/domain.ResponseRefreshToken"
                         }
                     }
                 ],
@@ -148,7 +148,7 @@
                 }
             }
         },
-        "domain.ResponseLogin": {
+        "domain.ResponseRefreshToken": {
             "type": "object",
             "properties": {
                 "accessToken": {
